; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/console/main/extr_cmd_wifi.c_register_wifi.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/console/main/extr_cmd_wifi.c_register_wifi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32 }
%struct.TYPE_4__ = type { i8*, i8*, %struct.TYPE_5__*, i32*, i32* }

@.str = private unnamed_addr constant [8 x i8] c"timeout\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"<t>\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"Connection timeout, ms\00", align 1
@join_args = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"<ssid>\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"SSID of AP\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"<pass>\00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"PSK of AP\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"join\00", align 1
@.str.8 = private unnamed_addr constant [26 x i8] c"Join WiFi AP as a station\00", align 1
@connect = common dso_local global i32 0, align 4
@__const.register_wifi.join_cmd = private unnamed_addr constant %struct.TYPE_4__ { i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.8, i32 0, i32 0), %struct.TYPE_5__* @join_args, i32* @connect, i32* null }, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @register_wifi() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = call i32 @arg_int0(i32* null, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @join_args, i32 0, i32 3), align 4
  %3 = call i32 @arg_str1(i32* null, i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0))
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @join_args, i32 0, i32 2), align 4
  %4 = call i32 @arg_str0(i32* null, i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0))
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @join_args, i32 0, i32 1), align 4
  %5 = call i32 @arg_end(i32 2)
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @join_args, i32 0, i32 0), align 4
  %6 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 bitcast (%struct.TYPE_4__* @__const.register_wifi.join_cmd to i8*), i64 40, i1 false)
  %7 = call i32 @esp_console_cmd_register(%struct.TYPE_4__* %1)
  %8 = call i32 @ESP_ERROR_CHECK(i32 %7)
  ret void
}

declare dso_local i32 @arg_int0(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @arg_str1(i32*, i32*, i8*, i8*) #1

declare dso_local i32 @arg_str0(i32*, i32*, i8*, i8*) #1

declare dso_local i32 @arg_end(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @esp_console_cmd_register(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
